// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitPipeline — template snapshots > emits stable code for "ACVP ML-KEM-768 known-answer test" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import json
import traceback
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · ML-KEM-768 · import ──
        try:
            priv_template_t1 = [
                (p11.CKA_CLASS, p11.CKO_PRIVATE_KEY),
                (p11.CKA_KEY_TYPE, p11.CKK_ML_KEM),
                (p11.CKA_DECAPSULATE, True),
                (p11.CKA_PARAMETER_SET, p11.CKP_ML_KEM_768),
                (p11.CKA_VALUE, bytes.fromhex('54027A27BC42346BCE5E19B84B074781179CBDA19557105F95A0639C61357DC89A0BBA38A8B9201726219434905DD2BBD5F7A57FD2135CE12C094B5829F97E40FA7AE08B579322CD2E87A4B060C095C1283AF19AB5761FCD5A5B556388F8582A8D941F6974857AFB4EFA624715772B04FA5A860999FBEC9A3E3502EBD7879CD48B2B2885A9927845AB292395944C1B874DEA356BEC5C34BC10D7AA9ECE2630D3276C0F248D70549456C70B7CF6078830B7116197264179B1825A2E8BBCF6119B81A7B9F1A3B1CE91AA2112BE43FBBA23DC780D34085F3730BE10A824B7B0CBB6B3E54A6CE42281B72680DF4B40631A173F60B92C306392E09821B771E7AB211183678B58A81340C8E1E13B49D86422D506B2024BFA974201506D9A2A099CA679C4F36CE2D6A0EE56A04F9115B9503F27A328AC49C846A4397268909439BFAC8966520758CD43109944A2EB9507767406D6F08CC569792FFBA976B08132C3236BF4BE514BAF92470B3EC70CF3077B90875831877E852B45BD1A8DDC2B9368A721D83C6CEA305D2EF50031051BB3A395934AB950485EC8315C3375940BE62EE333647F16718734B1EC81C4CC1902761689E72ACF695B8834B04B90583ADBE13BBC731C8C33CB695154F540825E84B27C8739D2962C8230AE3E09286DDC069DE52937E18D0840AD339CAA6D55418BFB400E83BFF410A56B76C8D8D35B7B7AB2CED23912F7C4CDA590980A2306CA9CBE87A4C7F5BABCE351C064A984236E2DE2511C74AEA2226648A80D830822B00B417501574E1C1412C32A323894DDBC629C4C30B1D7645893B4C1643B5F12729F2A389CF38F2045807049028271592900A79066B92159A75D5C08683C4696CA5E0AE10036B5C9DF34CF61688EBC024F0CE78E26F3A329AC36BB22050AE7439A86BDA6673BD4250F354653AC77990FFB215BA1C8CBE0A4F4CB3818C926215519A6E257E407A5A02470141CBA499999AD053CFD89B106C855E7DAA8734218ED061BA9BA82119805940A4A67E4C1E162A9C58A93698BC82F620D5BD761D2F5795A512D74753BF4881D34D476A826923D534928B77C52B3B7B28B48D6867799165412815EB7B5A79D184C12918908B410D7405E7BACA50F0067825262004A9F739C7D569A6915C30C4A624C4CF7C9A559C13EC540759BAEA5A32715F1815E79BC23836EB96726BBC787AD1A25AA2A4783C78BCE9AA05E9234C9E938C73A6E89CB1F00878B687B1BDB453E7C60203F8C91755CA7B3EA763601708AC6A4EE8B05A42B7F8941006803AB66288718807214166519EB8A57C897EFD80DD346A103AA4E8FA4285CF5B2D87448F110647E7A20DE210010751AFE70B4DA1C662210548DD8C0EA5AAFD26B0363A85BF675BC0D8A77E6187AE5C041D8779DD770A4A7917317A48222573C940419269193DFEB7B41022CFA6009D3B48DEE229F0D220A9960707D95292A9ABA8A1BAB48647BE125AC1FE33A55918870B59C2A1005F8B2ACAA659AA312033B6C9518F38D03581112A307907779B0F199C7471A8E7A7226AC6F87A420291B8D841BB79D5974642C29CE11AA36149D321780AA32910AA00333E738504C14B725921C8C8FD956805B7597F7E632D1A8619C6839354086919BC7B8A547FF18B523075FD1706856400952489E4CD13ED8B17A817A3076E0947B860EC9558BD9D3C94DF5418A7A7301763999C09996715CE32AACFEF767A44969925949CC9B8120CB78953BCF6FB8282427CB3F4CBBC50AB23274493A8BA7E5C09088160FDA731B55980867912BAC53125B27073BB502AFAC5E74973E0F3601DC50CE08CC7F3FA44CE331A43F9673BE745295E693077264A8E238F0A912C0A59C44D561E2A8BD831541FE869B3110B051100DB3517F87510ECAD8651CE4998BB648002BA41A5351FA2A4ED94A58CB707214A59F8876176CF82FCEB99364971C7C0896E8B62C0544463FF101983C2045981CCD9173EB33BA18483ED915BD11EA950DB3A8787C105263242E3A64C748B8B1A5947880C5BF3896E08B4B9916A39FD70C2FF8BD041A2B18E251D16A276E38100A613EA96A86CB3652DCC83F2D31CD9F8B79E42541A66752D191436CF5B5D8350EE7835CDB122855392C1DA5C33FDA12AD1028F2806861A2AB9C63785FD11E220346322C250936AB819254734A8DC9241971AC90CDA6696ADB90D1E327DC977841ABA38324C8FB2092784942003A0808E5546D034592F03BACC19E3138C9070CCEA80A933D536C49E4771091AF8A70207D474574C64B9F1C8E47224174061117E98C18897A7B1B3C4478C6558C321A89A84B6C508947CB61C89204FBCA43BCAA1D688F768B02E50BABEBF0C5FB8962B2355973C4193FA92E0CE4B9F8473E154828C986BF63E1CD985C6F0462C9B4374594D226C5E99B8A844978DB8DD2839E27138AACF75E917635CEC4B407A54F184C22F62981B9F4552FB334FF2B7FF68B470FD61B993C32581CC0F39881A5A6A769A60297F4B0579ACBF52A8ABB143885886245CA2636E20498959E4F2857AB96706E6409C4164BA88C7193E568E4446120215A6D8499C6B4BC559628A9F481C7DB51E2E10DF1F4339A647B4CCC0405B79F70A90CA9A8AD07789222BA6E66C3AFF42B61BAA637AF15126C88B2E210A7CAD9CB08CBB5123A7F9BB4AD63DAAEA6B43F9AABA561212823CB898A676C967B2D64F4B6333439F8993BD7B19687248926E077A9700431A59157B9668EE022B6D31343F15C08F14488877DFB30A552C06F96A16F354B9A3F19090B32A043B43256BA5B1088B56A4125588C8746D4099EA21C4F33AD8C5C7C32286DEE2CA76FC2651D57AEE9D847824AC609B5BFD5C87316C2AFE0E153D6326AF89987ECB70CF0A0A77FA000E0E0ACC2685E2317429C3A7513F42873CB98F669703AE9146919226DB58D6C2B93B6F50C7CDAB677B505945A0F2523886C1B82A6A7CC7EBA9251096D88360D7EF6473ACBCD359A0D20414B95C209B2413B1483A3A061386377B28E3896BCD8C5E2692681CC803E1694EFB6CE353082FFCA4079EA9BB7B2025BCB68990466ED2803AB11516D80325DC4CDE3DA9E020653E084C45F837C88711DF3AA6075741C1283121C8B1C691013969A62B2563E556206CF0810848691C7C408D018617A7300AD943E189A9B44512EF13B669831392F1329E2AC7C623AA044223079139B7F1C213E93682ED86165468377D40884310163A5539F27745E667ADF506896BA933B002E4D50B2497ECFF09D0BBCA4F7E6F9DB9E10C643D23701BD6385E163CF71C1E919A6E20A03ECC855C2ACD21B09157DE2EFB9A09FB3550DFEE752404BDEC48383110BB08F4FAA97428D2EA7C8C4465AB3BB7600A9220B115E89EF378EE3C83C4AA9991C3A')),
                (p11.CKA_TOKEN, True),
            ]
            priv_t1 = s.create_object(priv_template_t1)
            print('%s imported · priv=%d' % ('ML-KEM-768', priv_t1))
            print('###STEP t1 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · ML-KEM-768 · decapsulate ──
        try:
            key_t2 = s.decapsulate(priv_t1, bytes.fromhex('0385E8044D17E2B96B3F50ED28C2502216322AC33F69D2CE34F0A11E9B3DE339AEBE98283A6010A34BDC98B0E5BBE142A38575DA305066331D8D11D161F512B4B56B60FD049DFEE3771473253A0310CD842C71CB7734474BFBDBBADD2B9B87C37804D8558B00D77B1F79F0FD2C94552A8D3B19FDD6A5511C4EBEEA40AA839A489AEC636B510BF51BF3782F24F53F752EE2DB9FB4964E8379D0FA70603CB8C2C7293BC35A56B818257B65FBE6B2C98178B61D7CEB58C7E1A9100650A945C739E3603C188BA3C179823950C6D874D7FC8F8DDB7A9EE941F4A78A0F8A1EAE080D4D77893AAEFB0DB452659B0275D171736390A1B23661C69058869A8C4D0BB46D1655858162012A057C7C067FD035D47D5D627E3CD27CD3CA021A34F8DB6695C7E581ECE67D898482D509E4DF61DCE5BBDFAAC89465A9209C547B4263E9155940F8FCB1DA3A4A7D25DF2969F31644741A8C6FE8065D5F176214A4DB8FE76BF41869B0F22E1F5CF5C34A5067B1D9F39F3AB4B0B9F6330D7CF6EC7477B53D9223FA70E4C680D49B32883D92B50C53CF9E61915437CF57ECA49D6BBC88C64CCB222D4F20227CCCD4F7E7C21F95CE74D6AB5DECE17F600AD1715248648E4D1AF6FE41A02023EB5CFF871EC654756B7D156E601E82827E17DD0FE4F5357136120A810506A40F28A0B860C3CE75BF7796653327939B507043AB8BE0175A9B312319818063AC40302EB42452DA0B1CB9E3C2E43C49D740A03AC1B9057FB44EFF830D548D12585F50DBAF7404C2DFA7F4403DB8B7CEE65DF528F575C7F552D0632553FC6C90A3B09C1114492392C165E9B1B0A10E9556C72CDE2BB23DF6DA784521249EEC542012EC33599B97B95FF5234158A6D553B3BBAE9704E630D64A66D658F74F27C8C30237E87686FB04551BB128D917305173E2788883352A0216FD8D0035D748C9B42A600073ADBA73F851BB5ECA287AD325A3A3561769868C56E6D84FB661ED5A41649342EA342F82BE528FD9BB4F492452C0A9426ED8677113EC6F1CAC51233F0520425C3B27ACFAA0D25A07BC2CA01115C90432ED14A1F4DDA693C6E704A16BECE8972D8218B62CEC4F255058988B224D86F2BDE4B221A3C672CB744CA8F9158A4E5C97D0C56AF5DFC1C5F0191F64CB6D7AB86B14432ECEB5A3ED77A8D3EA651A07C9A0CF95E631F41C2AB29191F66DD9A73271F47A455999C5FC8391550BBB346CA1BCAD598A32A50CB52281156874F36DE9D8EA5860D99703EA3F4907C640B47A75A285B4347845CD6C94407995F569FD8A4B12461D8236E4015AE000E2ACAF2BD9F8D28377EC0D9E4CAE714C481C5ABAE37448B3F84A291B84B4213C8FE1F6E0FDFA1A6D1A52C974F795C5947F667A8DBE162983EC0C71C0F0237E6ED8BCB7AC9E4C73B5A1ED85FD5E0FA2810C842D484D6F9DFCC8472F05683D9D1144EF6C36294BD06A019EFEC202FC46288EBA2ADE82AA3363FAF32B9B027C75A7D615845CF2EC538141F1746009737600F697CC8D90C80C1E19F1AB2C08646C0E3958'))
            result_t2 = s.value(key_t2)
            print('%s decapsulate · secret=%d B' % ('ML-KEM-768', len(result_t2)))
            print('###STEP t2 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'shared secret', 'hex': (result_t2).hex(), 'bytesLen': len(result_t2)}]}))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · ACVP check · assert ──
        try:
            _actual = s.value(key_t2).hex()
            _expected = '79d74f6c6c2d916bec47bd828fd9b67295a37f54927fab1263c0d122f1c6f1ed'
            if _actual != _expected: raise RuntimeError(f'ACVP KAT MISMATCH — expected {_expected[:32]}..., got {_actual[:32]}...')
            print('  ACVP KAT MATCH: shared secret matches NIST ACVP ML-KEM-768 tcId=26')
            print('###STEP t3 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "Empty" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import json
import traceback
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        pass  # empty pipeline
    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "Encrypt + sign (PQ)" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import json
import traceback
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · AES-256-GCM · generate ──
        try:
            key_t1 = s.generate_aes256(token=True)
            print('%s key · handle=%d' % ('AES-256-GCM', key_t1))
            print('###STEP t1 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · AES-256-GCM · encrypt ──
        try:
            iv_t2 = os.urandom(12)
            result_t2 = s.encrypt_gcm(key_t1, pipeline_input, iv_t2)
            print('%s ciphertext · %d B' % ('AES-256-GCM', len(result_t2)))
            print('###STEP t2 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'ciphertext', 'hex': (result_t2).hex(), 'bytesLen': len(result_t2)}]}))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · SHA3-256 · digest ──
        try:
            result_t3 = s.digest(p11.CKM_SHA3_256, result_t2)
            print('%s · %s' % ('SHA3-256', result_t3.hex()[:32]))
            print('###STEP t3 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'digest', 'hex': (result_t3).hex(), 'bytesLen': len(result_t3)}]}))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t4 · ML-DSA-65 · generate ──
        try:
            pub_t4, priv_t4 = s.generate_ml_dsa(p11.CKP_ML_DSA_65, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-DSA-65', pub_t4, priv_t4))
            print('###STEP t4 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t4 ok###')
        except Exception as _e:
            print('###STEP t4 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t4 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t5 · ML-DSA-65 · sign ──
        try:
            result_t5 = s.sign(priv_t4, result_t3, p11.CKM_ML_DSA)
            print('%s signature · %d B' % ('ML-DSA-65', len(result_t5)))
            print('###STEP t5 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'signature', 'hex': (result_t5).hex(), 'bytesLen': len(result_t5)}]}))
            print('###STEP t5 ok###')
        except Exception as _e:
            print('###STEP t5 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t5 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "Hybrid signature" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import json
import traceback
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · ML-DSA-65 · generate ──
        try:
            pub_t1, priv_t1 = s.generate_ml_dsa(p11.CKP_ML_DSA_65, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-DSA-65', pub_t1, priv_t1))
            print('###STEP t1 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · ECDSA P-256 · generate ──
        try:
            pub_t2, priv_t2 = s.generate_ec_p256(token=True)
            print('%s keypair · pub=%d priv=%d' % ('ECDSA P-256', pub_t2, priv_t2))
            print('###STEP t2 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · SHA-256 · digest ──
        try:
            result_t3 = s.digest(p11.CKM_SHA256, pipeline_input)
            print('%s · %s' % ('SHA-256', result_t3.hex()[:32]))
            print('###STEP t3 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'digest', 'hex': (result_t3).hex(), 'bytesLen': len(result_t3)}]}))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t4 · ML-DSA-65 · sign ──
        try:
            result_t4 = s.sign(priv_t1, result_t3, p11.CKM_ML_DSA)
            print('%s signature · %d B' % ('ML-DSA-65', len(result_t4)))
            print('###STEP t4 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'signature', 'hex': (result_t4).hex(), 'bytesLen': len(result_t4)}]}))
            print('###STEP t4 ok###')
        except Exception as _e:
            print('###STEP t4 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t4 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t5 · ECDSA P-256 · sign ──
        try:
            result_t5 = s.sign(priv_t2, result_t3, p11.CKM_ECDSA_SHA256)
            print('%s signature · %d B' % ('ECDSA P-256', len(result_t5)))
            print('###STEP t5 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'signature', 'hex': (result_t5).hex(), 'bytesLen': len(result_t5)}]}))
            print('###STEP t5 ok###')
        except Exception as _e:
            print('###STEP t5 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t5 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "ML-KEM round trip" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import json
import traceback
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · ML-KEM-768 · generate ──
        try:
            pub_t1, priv_t1 = s.generate_ml_kem(p11.CKP_ML_KEM_768, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-KEM-768', pub_t1, priv_t1))
            print('###STEP t1 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · ML-KEM-768 · encapsulate ──
        try:
            result_t2, key_t2 = s.encapsulate(pub_t1)
            print('%s encapsulate · ct=%d B secret=%d B'
                  % ('ML-KEM-768', len(result_t2), len(s.value(key_t2))))
            print('###STEP t2 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'ciphertext', 'hex': (result_t2).hex(), 'bytesLen': len(result_t2)}, {'name': 'shared secret', 'hex': (s.value(key_t2)).hex(), 'bytesLen': len(s.value(key_t2))}]}))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · ML-KEM-768 · decapsulate ──
        try:
            key_t3 = s.decapsulate(priv_t1, result_t2)
            result_t3 = s.value(key_t3)
            print('%s decapsulate · secret=%d B match=%s'
                  % ('ML-KEM-768', len(result_t3), result_t3 == s.value(key_t2)))
            print('###STEP t3 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'shared secret', 'hex': (result_t3).hex(), 'bytesLen': len(result_t3)}]}))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "PQ TLS handshake" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import json
import traceback
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · ML-KEM-768 · generate ──
        try:
            pub_t1, priv_t1 = s.generate_ml_kem(p11.CKP_ML_KEM_768, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-KEM-768', pub_t1, priv_t1))
            print('###STEP t1 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · ML-KEM-768 · encapsulate ──
        try:
            result_t2, key_t2 = s.encapsulate(pub_t1)
            print('%s encapsulate · ct=%d B secret=%d B'
                  % ('ML-KEM-768', len(result_t2), len(s.value(key_t2))))
            print('###STEP t2 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'ciphertext', 'hex': (result_t2).hex(), 'bytesLen': len(result_t2)}, {'name': 'shared secret', 'hex': (s.value(key_t2)).hex(), 'bytesLen': len(s.value(key_t2))}]}))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · ML-KEM-768 · decapsulate ──
        try:
            key_t3 = s.decapsulate(priv_t1, result_t2)
            result_t3 = s.value(key_t3)
            print('%s decapsulate · secret=%d B match=%s'
                  % ('ML-KEM-768', len(result_t3), result_t3 == s.value(key_t2)))
            print('###STEP t3 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'shared secret', 'hex': (result_t3).hex(), 'bytesLen': len(result_t3)}]}))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t4 · ML-DSA-65 · generate ──
        try:
            pub_t4, priv_t4 = s.generate_ml_dsa(p11.CKP_ML_DSA_65, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-DSA-65', pub_t4, priv_t4))
            print('###STEP t4 detail### ' + json.dumps({'kind': 'output', 'fields': []}))
            print('###STEP t4 ok###')
        except Exception as _e:
            print('###STEP t4 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t4 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t5 · ML-DSA-65 · sign ──
        try:
            result_t5 = s.sign(priv_t4, pipeline_input, p11.CKM_ML_DSA)
            print('%s signature · %d B' % ('ML-DSA-65', len(result_t5)))
            print('###STEP t5 detail### ' + json.dumps({'kind': 'output', 'fields': [{'name': 'signature', 'hex': (result_t5).hex(), 'bytesLen': len(result_t5)}]}))
            print('###STEP t5 ok###')
        except Exception as _e:
            print('###STEP t5 detail### ' + json.dumps({'kind': 'error', 'excType': type(_e).__name__, 'message': str(_e), 'traceback': traceback.format_exc()}))
            print('###STEP t5 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;
